<resources>
    <!-- Application info -->
    <string name="app_name">Sleep Monitoring</string>

    <!-- Shared Preferences -->
    <string name="shared_preferences_file">it.unipi.ing.mobile.sleepmonitoring_smartphone</string>
    <string name="theme_preferences_key">Theme</string>
    <string name="user_first_name_preferences_key">Firstname</string>
    <string name="user_last_name_preferences_key">Lastname</string>
    <string name="user_email_preferences_key">Email</string>

    <!-- Google SignIn, SignOut and Disconnection -->
    <string name="signIn">SignIn completed</string>
    <string name="signOut">SignOut completed</string>
    <string name="disconnection">Disconnection completed</string>

    <!-- Error messages -->
    <string name="failed_google_login">There are problems with Google Play services in your device</string>
    <string name="rejected_login_or_permissions">The user\'s account information and permissions are needed.</string>
    <string name="no_wearable_api">Wearable APIs are not available on this device. Download WearOS and retry.</string>
    <string name="main_activity_error">Application stops work for internal error</string>

    <!-- Description string -->
    <string name="nav_header_desc">Navigation Header</string>

    <!-- Default user information -->
    <string name="nav_header_name">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>

    <!-- Labels for sidebar's items -->
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>

    <!-- Labels for fragments -->
    <!-- Account fragment -->
    <string name="account_first_name_label">First Name:</string>
    <string name="account_last_name_label">Last Name:</string>
    <string name="account_email_label">Email:</string>
    <string name="account_delete_label">Delete Account</string>

    <!-- Home fragment -->
    <string name="home_welcome_label">Welcome </string>
    <string name="home_status_label">Status: </string>
    <string name="home_status_init">DETECTING</string>
    <string name="home_last_report_button">See last report</string>

    <!-- Report fragment -->
    <string name="report_label">Select one day: </string>
    <string name="editText_date_hint">Enter Date</string>
    <string name="report_plot_title">Sleep Evaluation</string>
    <string name="report_range_title">Type of movement</string>
    <string name="domain_title">Time</string>
    <string name="report_date_format">yyyy-MM-dd</string>
    <string name="report_time_format">HH:mm</string>
    <string name="timestamp_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="micro_movements_title">Micro-Movements</string>
    <string name="macro_movements_title">Macro-Movements</string>
    <string name="roll_movements_title">Rollover</string>
    <string name="micro_movements_label">micro</string>
    <string name="macro_movements_label">macro</string>
    <string name="roll_movements_label">roll</string>
    <string name="no_report_to_plot">There are no movements to plot</string>
    <string name="no_sessions_in_date">There are no sessions for this day</string>
    <string name="no_sessions_at_all">There are no saved sessions</string>
    <string name="spinner_prompt">Select one session</string>

    <!-- Settings fragment -->
    <string name="settings_theme">Theme:</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="delete_report_history_button">Delete report history -></string>
    <string name="delete_history_label">From which data do you want to delete?</string>
    <string name="all_report_label">Today</string>
    <string name="last_month_label">Last month</string>
    <string name="last_six_months_label">Last six month</string>
    <string name="last_year_label">Last year</string>
    <string name="start_delete_button">Delete</string>
    <string name="deleted_report_confirmation">Reports deleted</string>

    <!-- Bluetooth -->
    <string name="bluetooth_alert_title">Bluetooth Low Energy</string>
    <string name="bluetooth_alert_message">Application need Bluetooth Low Energy to communicate with your smartwatch, enable to monitor sleeping !</string>
    <string name="bluetooth_enable">Enable</string>
    <string name="bluetooth_ignore">Ignore</string>
    <string name="bluetooth_neutral">Later</string>

    <!-- Database -->
    <string name="db_name">sleep_monitoring.db</string>

    <!-- Connection -->
    <string name="start_endpoint">/start-service</string>
    <string name="start_action">/start-service</string>
    <string name="stop_action">/stop-service</string>
    <string name="watch_capability">it.unipi.ing.mobile.sleepmonitoring.watch</string>
    <!-- Status -->
    <string name="status_intent">it.unipi.ing.mobile.sleepmonitoring_smartphone.RUNNING</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_running">Running</string>

    <!-- Notification -->
    <string name="notification_channel_id">SleepMonitoringNotification</string>
    <string name="notification_channel_name">SleepMonitoring</string>
    <string name="notification_disconnection_title">Sleep Monitoring Disconnection</string>
    <string name="notification_disconnection_text">Watch disconnected, the application will not be able to monitor your sleep</string>
    <string name="notification_service_tag">SleepMonitoringDisconnection</string>
    <string name="notification_service_title">Sleep Monitoring Running</string>
    <string name="notification_service_text">Receiving data from watch</string>
</resources>