<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- Navigation graph is an XML resource file that contains all of your app's destinations and
    actions, and these destinations are connected via actions. Fragments represent all the
    destinations of your app -->
    <fragment
        android:id="@+id/nav_home"
        android:name="it.unipi.ing.mobile.sleepmonitoring_smartphone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_report"
            app:destination="@id/nav_report" />
    </fragment>
    <fragment
        android:id="@+id/nav_report"
        android:name="it.unipi.ing.mobile.sleepmonitoring_smartphone.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" >
        <argument
            android:name="last_report"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="it.unipi.ing.mobile.sleepmonitoring_smartphone.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_account"
        android:name="it.unipi.ing.mobile.sleepmonitoring_smartphone.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

</navigation>