<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <TextView
            android:id="@+id/report_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <EditText
            android:id="@+id/editText_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/editText_date_hint"
            android:inputType="date"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_label"
            android:autofillHints="" />

        <com.androidplot.xy.XYPlot
            android:id="@+id/report_plot"
            style="@style/APDefacto.Light"
            android:layout_width="324dp"
            android:layout_height="385dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            app:domainTitle="Legend:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_date"
            app:lineLabelRotationBottom="-45"
            app:lineLabels="left|bottom"
            app:rangeTitle="@string/report_range_title"
            app:title="@string/report_plot_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


